--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -1,3 +1,9 @@
 @import "/node_modules/flag-icons/css/flag-icons.min.css";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 @import "node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+
+body{
+  min-height: 100vh;
+  background: rgb(70,70,70);
+  background: linear-gradient(0deg, rgba(70,70,70,0.8239496482186625) 0%, rgba(108,67,67,0.3225490879945728) 50%, rgba(70,70,70,0) 100%); 
+}
