--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -1,3 +1,5 @@
+@use './partials/variables' as *;
+
 @import "/node_modules/flag-icons/css/flag-icons.min.css";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 @import "node_modules/@fortawesome/fontawesome-free/css/all.min.css";
