--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -7,5 +7,5 @@
 body{
   min-height: 100vh;
   background: rgb(70,70,70);
-  background: linear-gradient(0deg, rgba(70,70,70,0.8239496482186625) 0%, rgba(108,67,67,0.3225490879945728) 50%, rgba(70,70,70,0) 100%); 
+  background: linear-gradient(0deg, rgba(70,70,70,0.8239496482186625) 0%, rgba(95, 95, 95, 0.521) 50%, rgba(70,70,70,0) 100%); 
 }
